--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-testw
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/.terraform.lock.hcl
+inventory/my-cluster/group_vars/all.yml
+terraform/vars.tf
