--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -57,7 +57,7 @@
     dest: ~{{ ansible_user }}/.kube/config
     remote_src: yes
     owner: "{{ ansible_user }}"
-    mode: "u=rw,g=,o="
+    mode: "644"
 
 - name: Replace https://localhost:6443 by https://master-ip:6443
   command: >-
