--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,4 @@ terraform/.terraform.lock.hcl
 inventory/my-cluster/group_vars/all.yml
 terraform/vars.tf
 terraform/.terraform
-
-# clear cach for the file '''cat .gitignore | while read line; do git rm --cached $line; done'''
+TODO.md
