--- a/roles/download/tasks/main.yml
+++ b/roles/download/tasks/main.yml
@@ -1,36 +1,15 @@
 ---
 
 - name: Download k3s binary x64
-  get_url:
-    url: https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/k3s
-    checksum: sha256:https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/sha256sum-amd64.txt
-    dest: /usr/local/bin/k3s
-    owner: root
-    group: root
-    mode: 0755
-  when: ansible_facts.architecture == "x86_64"
+  stat:
+    path: home/"{{ ansible_user }}"/k3s.sh
+  become_user: "{{ ansible_user }}"
+  register: k3s_script_exist
 
-- name: Download k3s binary arm64
+- name: Download k3s binary x64
   get_url:
-    url: https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/k3s-arm64
-    checksum: sha256:https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/sha256sum-arm64.txt
-    dest: /usr/local/bin/k3s
-    owner: root
-    group: root
-    mode: 0755
-  when:
-    - ( ansible_facts.architecture is search("arm") and
-        ansible_facts.userspace_bits == "64" ) or
-      ansible_facts.architecture is search("aarch64")
-
-- name: Download k3s binary armhf
-  get_url:
-    url: https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/k3s-armhf
-    checksum: sha256:https://github.com/k3s-io/k3s/releases/download/{{ k3s_version }}/sha256sum-arm.txt
-    dest: /usr/local/bin/k3s
-    owner: root
-    group: root
-    mode: 0755
-  when:
-    - ansible_facts.architecture is search("arm")
-    - ansible_facts.userspace_bits == "32"
+    url: https://get.k3s.io
+    dest: home/"{{ ansible_user }}"/k3s.sh
+    mode: 777
+  become_user: "{{ ansible_user }}"
+  when: not k3s_script_exist
