--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -1,20 +1,16 @@
 ---
+# k3s script install
 
-- name: Copy K3s service file
-  register: k3s_service
-  template:
-    src: "k3s.service.j2"
-    dest: "{{ systemd_dir }}/k3s.service"
-    owner: root
-    group: root
-    mode: 0644
+- name: check if dk3s is already installed /var/lib/rancher/k3s/server/node-token
+  stat:
+    path: /var/lib/rancher/k3s/server/node-token
+  register: k3s_installed
 
-- name: Enable and check K3s service
-  systemd:
-    name: k3s
-    daemon_reload: yes
-    state: restarted
-    enabled: yes
+- name: install k3s
+  command: >-
+    ~/k3s.sh --write-kubeconfig-mode 644
+  # when: not k3s_installed
+  changed_when: true
 
 - name: Wait for node-token
   wait_for:
@@ -44,18 +40,6 @@
     path: /var/lib/rancher/k3s/server
     mode: "{{ p.stat.mode }}"
 
-- name: Create directory .kube
-  file:
-    path: ~{{ ansible_user }}/.kube
-    state: directory
-    owner: "{{ ansible_user }}"
-    mode: "u=rwx,g=rx,o="
-
-- name: Change k3s.yaml permissions to 644
-  file:
-    path: /etc/rancher/k3s/k3s.yaml
-    owner: "{{ ansible_user }}"
-    mode: '644'
 
 - name: Replace https://localhost:6443 by https://master-ip:6443
   command: >-
@@ -64,17 +48,6 @@
       --kubeconfig ~{{ ansible_user }}/.kube/config
   changed_when: true
 
-- name: Create kubectl symlink
-  file:
-    src: /usr/local/bin/k3s
-    dest: /usr/local/bin/kubectl
-    state: link
-
-- name: Create crictl symlink
-  file:
-    src: /usr/local/bin/k3s
-    dest: /usr/local/bin/crictl
-    state: link
 
 - name: check if helm is installed /usr/local/bin/helm
   stat:
@@ -93,3 +66,8 @@
     ~/get-helm-3.sh
   when: not helm_check.stat.exists
   changed_when: true
+
+- name: install nfs utils
+  package:
+    name: nfs-common
+    state: present
