--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -76,20 +76,8 @@
     dest: /usr/local/bin/crictl
     state: link
 
-- name: check if helm is installed /usr/local/bin/helm
-  stat:
-    path: /usr/local/bin/helm
-  register: helm_check
-
-- name: Download get-helm-3
-  get_url:
-    url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-    dest: ~/get-helm-3.sh
-    mode: '700'
-  when: not helm_check.stat.exists
-
-- name: install helm if not exist
-  command: >-
-    ~/get-helm-3.sh
-  when: not helm_check.stat.exists
-  changed_when: true
+- name: copy config to local host
+  fetch:
+    src: /etc/rancher/k3s/k3s.yaml 
+    dest: ~/.kube/config
+    flat: yes
