--- a/roles/download/tasks/main.yml
+++ b/roles/download/tasks/main.yml
@@ -2,14 +2,12 @@
 
 - name: Download k3s binary x64
   stat:
-    path: home/"{{ ansible_user }}"/k3s.sh
-  become_user: "{{ ansible_user }}"
+    path: /tmp/k3s.sh
   register: k3s_script_exist
 
 - name: Download k3s binary x64
   get_url:
     url: https://get.k3s.io
-    dest: home/"{{ ansible_user }}"/k3s.sh
+    dest: /tmp/k3s.sh
     mode: 777
-  become_user: "{{ ansible_user }}"
-  when: not k3s_script_exist
+  when: not k3s_script_exist.stat.exists
