--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -1,15 +1,19 @@
 ---
 # k3s script install
 
-- name: check if dk3s is already installed /var/lib/rancher/k3s/server/node-token
+- name: check if dk3s is already installed /etc/systemd/system/k3s.service
   stat:
-    path: /var/lib/rancher/k3s/server/node-token
+    path: /etc/systemd/system/k3s.service
   register: k3s_installed
 
 - name: install k3s
   command: >-
-    ~/k3s.sh --write-kubeconfig-mode 644
-  # when: not k3s_installed
+    /tmp/k3s.sh server --node-taint $K3S_NODE_TAINT --datastore-endpoint $K3S_DATASTORE_ENDPOINT --tls-san $K3S_TLSSAN
+  environment:
+    K3S_DATASTORE_ENDPOINT: "postgres://k3s:kqG9JzYn3BuJTgr8NPhz5M@192.168.3.103:5432/k3s"
+    K3S_NODE_TAINT: "CriticalAddonsOnly=true:NoExecute"
+    K3S_TLSSAN: k3s.sayada.lan
+  when: not k3s_installed.stat.exists
   changed_when: true
 
 - name: Wait for node-token
@@ -41,41 +45,15 @@
     mode: "{{ p.stat.mode }}"
 
 
-- name: Replace https://localhost:6443 by https://master-ip:6443
+- name: Replace https://localhost:6443 by https://lb-ip:6443
   command: >-
     k3s kubectl config set-cluster default
-      --server=https://{{ master_ip }}:6443
+      --server=https://{{ lb_ip }}:6443
       --kubeconfig ~{{ ansible_user }}/.kube/config
   changed_when: true
 
-
-<<<<<<< HEAD
-- name: check if helm is installed /usr/local/bin/helm
-  stat:
-    path: /usr/local/bin/helm
-  register: helm_check
-
-- name: Download get-helm-3
-  get_url:
-    url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-    dest: ~/get-helm-3.sh
-    mode: '700'
-  when: not helm_check.stat.exists
-
-- name: install helm if not exist
-  command: >-
-    ~/get-helm-3.sh
-  when: not helm_check.stat.exists
-  changed_when: true
-
-- name: install nfs utils
-  package:
-    name: nfs-common
-    state: present
-=======
 - name: copy config to local host
   fetch:
     src: /etc/rancher/k3s/k3s.yaml 
     dest: ~/.kube/config
     flat: yes
->>>>>>> main
