--- a/site.yml
+++ b/site.yml
@@ -4,14 +4,19 @@
   gather_facts: yes
   become: yes
   roles:
-    - role: prereq
+    # - role: prereq
     - role: download
-    - role: raspberrypi
+    # - role: raspberrypi
 
-- hosts: master
+- hosts: master[0]
   become: yes
   roles:
     - role: k3s/master
+
+- hosts: master[1:]
+  become: yes
+  roles:
+    - role: k3s/master_node
 
 - hosts: node
   become: yes
@@ -22,3 +27,18 @@
   connection: local
   roles:
    - role: postconfig/localhost
+
+
+
+#### testing
+# - hosts: master
+#   become: yes
+#   roles:
+#     - role: download
+#     - role: k3s/master
+
+# - hosts: node
+#   become: yes
+#   roles:
+#     - role: download
+#     - role: k3s/node
