--- a/roles/k3s/master_node/tasks/main.yml
+++ b/roles/k3s/master_node/tasks/main.yml
@@ -13,7 +13,7 @@
     K3S_DATASTORE_ENDPOINT: "postgres://k3s:kqG9JzYn3BuJTgr8NPhz5M@192.168.3.103:5432/k3s"
     K3S_NODE_TAINT: CriticalAddonsOnly=true:NoExecute
     K3S_TOKEN: "{{ hostvars[groups['master'][0]]['token'] }}"
-    INSTALL_K3S_CHANNEL: stable
-    K3S_TLSSAN: k3s.sayada.lan
+    INSTALL_K3S_VERSION: "{{k3s_version}}"
+    K3S_TLSSAN: "{{lb_ip}}"
   when: not k3s_installed.stat.exists
   changed_when: true
