--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -1,42 +1,13 @@
 ---
-- name: Disable services
-  systemd:
-    name: "{{ item }}"
-    state: stopped
-    enabled: no
-  failed_when: false
-  with_items:
-    - k3s
-    - k3s-node
+- name: check if k3s is installed as a master
+  stat:
+    path: /usr/local/bin/k3s-uninstall.sh
+  register: k3s_master_install
 
-- name: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
-  register: pkill_containerd_shim_runc
-  command: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
-  changed_when: "pkill_containerd_shim_runc.rc == 0"
-  failed_when: false
+- name: uninstall k3s master
+  command: /usr/local/bin/k3s-uninstall.sh
+  when: k3s_master_install.stat.exists
 
-- name: Umount k3s filesystems
-  include_tasks: umount_with_children.yml
-  with_items:
-    - /run/k3s
-    - /var/lib/kubelet
-    - /run/netns
-    - /var/lib/rancher/k3s
-  loop_control:
-    loop_var: mounted_fs
-
-- name: Remove service files, binaries and data
-  file:
-    name: "{{ item }}"
-    state: absent
-  with_items:
-    - /usr/local/bin/k3s
-    - "{{ systemd_dir }}/k3s.service"
-    - "{{ systemd_dir }}/k3s-node.service"
-    - /etc/rancher/k3s
-    - /var/lib/kubelet
-    - /var/lib/rancher/k3s
-
-- name: daemon_reload
-  systemd:
-    daemon_reload: yes
+- name: uninstall k3s agent
+  command: /usr/local/bin/k3s-agent-uninstall.sh
+  when: not k3s_master_install.stat.exists
