--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -8,19 +8,19 @@
 
 - name: install k3s
   command: >-
-    /tmp/k3s.sh server --cluster-init --tls-san $K3S_TLSSAN --disable servicelb
+    /tmp/k3s.sh server --cluster-init --tls-san {{lb_ip}} --disable servicelb
   environment:
-    # K3S_DATASTORE_ENDPOINT: "postgres://k3s:kqG9JzYn3BuJTgr8NPhz5M@192.168.3.103:5432/k3s"
-    # K3S_NODE_TAINT: "CriticalAddonsOnly=true:NoExecute" # needs to add --node-taint $K3S_NODE_TAINT to the command to enable taint
-    K3S_TLSSAN: "{{lb_ip}}"
-    K3S_TOKEN: "K108b3a39c5198998adbedc5fa0b173853c04496188cf5cbb0f9a4072ec39d14a6d::server:c0c788fc75e41db1a6b5e30b15d8f7ef"
     INSTALL_K3S_VERSION: "{{k3s_version}}"
   when: not k3s_installed.stat.exists
   changed_when: true
 
+- name: Pause for 10 seconds to build app cache
+  pause:
+    seconds: 10
+
 - name: Wait for node-token
   wait_for:
-    path: /var/lib/rancher/k3s/server/node-token
+    path: /var/lib/rancher/k3s/server/token
 
 - name: Register node-token file access mode
   stat:
@@ -34,7 +34,7 @@
 
 - name: Read node-token from master
   slurp:
-    src: /var/lib/rancher/k3s/server/node-token
+    src: /var/lib/rancher/k3s/server/token
   register: node_token
 
 - name: Store Master node-token
