update nfs install

--- a/roles/download/tasks/main.yml
+++ b/roles/download/tasks/main.yml
@@ -11,3 +11,8 @@
     dest: /tmp/k3s.sh
     mode: 777
   when: not k3s_script_exist.stat.exists
+
+- name: install nfs-common on the servers
+  package:
+    name: nfs-common
+    state: present
