--- a/roles/postconfig/localhost/tasks/main.yml
+++ b/roles/postconfig/localhost/tasks/main.yml
@@ -33,3 +33,9 @@
     ~/get-helm-3.sh
   when: not helm_check.stat.exists
   changed_when: true
+
+- name: install metalLB on the cluster
+  command: >-
+    kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.10.3/manifests/namespace.yaml
+    kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.10.3/manifests/metallb.yaml
+    
