--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -8,10 +8,10 @@
 
 - name: install k3s
   command: >-
-    /tmp/k3s.sh server --node-taint $K3S_NODE_TAINT --datastore-endpoint $K3S_DATASTORE_ENDPOINT --tls-san $K3S_TLSSAN
+    /tmp/k3s.sh server --datastore-endpoint $K3S_DATASTORE_ENDPOINT --tls-san $K3S_TLSSAN --disable servicelb
   environment:
-    K3S_DATASTORE_ENDPOINT: "postgres://k3s:kqG9JzYn3BuJTgr8NPhz5M@192.168.3.103:5432/k3s"
-    K3S_NODE_TAINT: "CriticalAddonsOnly=true:NoExecute"
+    K3S_DATASTORE_ENDPOINT: "postgres://k3s:kqG9JzYn3BuJTgr8NPhz5M@192.168.3.10:5432/k3s"
+    # K3S_NODE_TAINT: "CriticalAddonsOnly=true:NoExecute"
     K3S_TLSSAN: "{{lb_ip}}"
     INSTALL_K3S_VERSION: "{{k3s_version}}"
   when: not k3s_installed.stat.exists
