clean up the code and updaste the sample var file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ terraform/.terraform.lock.hcl
 inventory/my-cluster
 terraform/.terraform
 TODO.md
+terraform/variables.tfvars
+terraform/.terraform.tfstate.lock.info
+terraform/terraform-plugin-proxmox.log
