--- a/terraform/variables.tfvars.sample
+++ b/terraform/variables.tfvars.sample
@@ -1,10 +1,12 @@
 pm_host = "192.168.3.110"
 pm_password = "password"
+pm_node_name = "pve"
+pm_tls_insecure = true
 pvt_key = "~/.ssh/proxk3s"
 num_k3s_masters = 1
-#num_k3s_masters_mem = 4096
-num_k3s_nodes = 4
-#num_k3s_nodes_mem = 4096
+num_k3s_masters_mem = 4096
+num_k3s_nodes = 2
+num_k3s_nodes_mem = 4096
 tamplate_vm_name = "ubuntu-focal-cloudinit-template"
 master_ips = [
   "192.168.3.81"
