--- a/site.yml
+++ b/site.yml
@@ -1,20 +1,20 @@
 ---
 
 - hosts: k3s_cluster
-  gather_facts: yes
-  become: yes
+  gather_facts: true
+  become: true
   roles:
     - role: prereq
     - role: download
     - role: raspberrypi
 
 - hosts: master
-  become: yes
+  become: true
   roles:
     - role: k3s/master
 
 - hosts: node
-  become: yes
+  become: true
   roles:
     - role: k3s/node
 
