update the readme file and change all.yml default

--- a/inventory/sample/group_vars/all.yml
+++ b/inventory/sample/group_vars/all.yml
@@ -5,7 +5,7 @@ systemd_dir: /etc/systemd/system
 master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
 extra_server_args: "--write-kubeconfig-mode=644"
 extra_agent_args: ""
-metallb: true
+metallb: false
 metallb_version: "v0.12.1"
-argocd: true
+argocd: false
 argocd_service_type: LoadBalancer
