add secondary interface

--- a/inventory/sample/group_vars/all.yml
+++ b/inventory/sample/group_vars/all.yml
@@ -1,6 +1,6 @@
 ---
 k3s_version: v1.22.2+k3s1
-ansible_user: debian
+ansible_user: ubuntu
 systemd_dir: /etc/systemd/system
 master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
 extra_server_args: "--write-kubeconfig-mode=644"
@@ -11,4 +11,3 @@ metallb_version: "v0.12.1"
 metallb_range: "192.168.3.93-192.168.3.94"
 argocd: false
 argocd_service_type: LoadBalancer
-
