--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,4 +29,4 @@ jobs:
         run: yamllint .
 
       - name: Run ansible-lint.
-        run: ansible-lint
+        run: ansible-lint -x fqcn-builtins
