--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -3,7 +3,7 @@
   systemd:
     name: "{{ item }}"
     state: stopped
-    enabled: no
+    enabled: false
   failed_when: false
   with_items:
     - k3s
